plusieur chantier a verifier super admi, schematactique, import photo refonte visuel des exercice et seance a verifier encore